--- a/wechat_mini_program/app.json
+++ b/wechat_mini_program/app.json
@@ -2,14 +2,14 @@
   "pages":[
     "pages/RC-user-home/index",
     "pages/RC-user-profile/index",
+    
     "pages/RC-user-report/index",
-    "pages/RC-user-score/index",
-    "pages/logs/logs"
+    "pages/RC-user-score/index"
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#006efc",
+    "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "eBay Payment Running Club",
-    "navigationBarTextStyle":"white"
+    "navigationBarTextStyle":"black"
   }
 }
