--- a/wechat_mini_program/app.json
+++ b/wechat_mini_program/app.json
@@ -1,15 +1,15 @@
 {
-  "pages":[
+  "pages": [
     "pages/RC-user-home/index",
+    "pages/RC-user-guard/index",
     "pages/RC-user-profile/index",
-    
     "pages/RC-user-report/index",
     "pages/RC-user-score/index"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "eBay Payment Running Club",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   }
 }
