fix a bug that interrupts startup

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -150,7 +150,7 @@
                     <!--允许移动生成的文件 -->
                     <verbose>true</verbose>
                     <!-- 是否覆盖 -->
-                    <overwrite>true</overwrite>
+                    <overwrite>false</overwrite>
                     <!-- 自动生成的配置 -->
                     <configurationFile>
                         src/main/resources/mybatis-generator.xml
