--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,5 +1,12 @@
 server:
-    port: 9090
+  port: 8443
+  ssl:
+    key-alias: guxiangfly.cn
+    key-store-type: JKS
+    key-store: classpath:guxiangfly.cn.jks
+    key-store-password: 45lgrs8gokejt0
+security:
+  require-ssl: true
 
 spring:
   datasource:
