--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -125,50 +125,55 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <fork>true</fork>
-                </configuration>
-            </plugin>
-           <!-- <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.5</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>mysql</groupId>
-                        <artifactId>mysql-connector-java</artifactId>
-                        <version>5.1.39</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.mybatis.generator</groupId>
-                        <artifactId>mybatis-generator-core</artifactId>
-                        <version>1.3.5</version>
-                    </dependency>
-                </dependencies>
+                <version>2.0.1.RELEASE</version>
                 <executions>
                     <execution>
-                        <id>Generate MyBatis Artifacts</id>
-                        <phase>package</phase>
                         <goals>
-                            <goal>generate</goal>
+                            <goal>repackage</goal>
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    &lt;!&ndash;允许移动生成的文件 &ndash;&gt;
-                    <verbose>true</verbose>
-                    &lt;!&ndash; 是否覆盖 &ndash;&gt;
-                    <overwrite>false</overwrite>
-                    &lt;!&ndash; 自动生成的配置 &ndash;&gt;
-                    <configurationFile>
-                        src/main/resources/mybatis-generator.xml
-                    </configurationFile>
-                </configuration>
-            </plugin>-->
+            </plugin>
+            <!-- <plugin>
+                 <groupId>org.springframework.boot</groupId>
+                 <artifactId>spring-boot-maven-plugin</artifactId>
+             </plugin>
+             <plugin>
+                 <groupId>org.mybatis.generator</groupId>
+                 <artifactId>mybatis-generator-maven-plugin</artifactId>
+                 <version>1.3.5</version>
+                 <dependencies>
+                     <dependency>
+                         <groupId>mysql</groupId>
+                         <artifactId>mysql-connector-java</artifactId>
+                         <version>5.1.39</version>
+                     </dependency>
+                     <dependency>
+                         <groupId>org.mybatis.generator</groupId>
+                         <artifactId>mybatis-generator-core</artifactId>
+                         <version>1.3.5</version>
+                     </dependency>
+                 </dependencies>
+                 <executions>
+                     <execution>
+                         <id>Generate MyBatis Artifacts</id>
+                         <phase>package</phase>
+                         <goals>
+                             <goal>generate</goal>
+                         </goals>
+                     </execution>
+                 </executions>
+                 <configuration>
+                     &lt;!&ndash;允许移动生成的文件 &ndash;&gt;
+                     <verbose>true</verbose>
+                     &lt;!&ndash; 是否覆盖 &ndash;&gt;
+                     <overwrite>false</overwrite>
+                     &lt;!&ndash; 自动生成的配置 &ndash;&gt;
+                     <configurationFile>
+                         src/main/resources/mybatis-generator.xml
+                     </configurationFile>
+                 </configuration>
+             </plugin>-->
         </plugins>
     </build>
 
