--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -9,7 +9,8 @@ server:
 
 spring:
   datasource:
-     url: jdbc:mysql://47.96.173.94:3306/runningcoin?useUnicode=yes&amp;characterEncoding=UTF-8&amp;useSSL=false
+     #url: jdbc:mysql://47.96.173.94:3306/runningcoin?useUnicode=yes&amp;characterEncoding=UTF-8&amp;useSSL=false
+     url: jdbc:mysql://47.96.173.94:3306/runningcoin?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
      username: root
      password: qwert6
      driver-class-name: com.mysql.jdbc.Driver
