--- a/wechat_mini_program/app.json
+++ b/wechat_mini_program/app.json
@@ -7,6 +7,7 @@
     "pages/RC-user-score/index"
   ],
   "window": {
+    "enablePullDownRefresh": true,
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "eBay Payment Running Club",
