--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -14,3 +14,11 @@ spring:
      username: root
      password: qwert6
      driver-class-name: com.mysql.jdbc.Driver
+  mail:
+    host: smtp.qq.com
+    username: 964999133@qq.com
+    password: plmksuixpkdmbcag
+    addressesEmail: xianggu@ebay.com,bshen@ebay.com
+    properties.mail.smtp.auth: true
+    properties.mail.smtp.starttls.enable: true
+    properties.mail.smtp.starttls.required: true
