--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -1,10 +1,15 @@
 server:
   port: 443
+  ssl:
+    key-alias: guxiangfly.cn
+    key-store-type: JKS
+    key-store: classpath:guxiangfly.cn.jks
+    key-store-password: 45lgrs8gokejt0
 spring:
   datasource:
-     url: jdbc:mysql://127.0.0.1:3306/runningcoin?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+     url: jdbc:mysql://47.96.173.94:3306/runningcoin_QA?useUnicode=yes&useSSL=false
      username: root
-     password: root
+     password: qwert6
      driver-class-name: com.mysql.jdbc.Driver
   mail:
     host: smtp.qq.com
