--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -1,11 +1,13 @@
 server:
   port: 2443
+  # 改为已经改为Nginx部署
+  servlet:
+    context-path: /prod/
   #ssl:
   #  key-alias: guxiangfly.cn
   #  key-store-type: JKS
   #  key-store: classpath:guxiangfly.cn.jks
   #  key-store-password: 45lgrs8gokejt0
-
 spring:
   datasource:
      url: jdbc:mysql://47.96.173.94:3306/runningcoin?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
