--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.running.coins</groupId>
     <artifactId>runningclub</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>runningclub</name>
@@ -151,7 +151,7 @@
                  <groupId>org.springframework.boot</groupId>
                  <artifactId>spring-boot-maven-plugin</artifactId>
              </plugin>-->
-     <!--        <plugin>
+             <plugin>
                  <groupId>org.mybatis.generator</groupId>
                  <artifactId>mybatis-generator-maven-plugin</artifactId>
                  <version>1.3.5</version>
@@ -177,16 +177,16 @@
                      </execution>
                  </executions>
                  <configuration>
-                     &lt;!&ndash;允许移动生成的文件 &ndash;&gt;
+                     <!--允许移动生成的文件 -->
                      <verbose>true</verbose>
-                     &lt;!&ndash; 是否覆盖 &ndash;&gt;
+                     <!-- 是否覆盖 -->
                      <overwrite>false</overwrite>
-                     &lt;!&ndash; 自动生成的配置 &ndash;&gt;
+                     <!-- 自动生成的配置 -->
                      <configurationFile>
                          src/main/resources/mybatis-generator.xml
                      </configurationFile>
                  </configuration>
-             </plugin>-->
+             </plugin>
         </plugins>
     </build>
 
