change the pom.xml

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,21 @@ backend/runningclub.iml
 backend/src/main/resources/keystore.p12
 .idea/
 logs/
+runningcoinCS/.idea
+runningcoinCS/target
+runningcoinCS/.mvn
+runningcoinCS/.gitingnore
+runningcoinCS/runningclub.iml
+runningcoinCS/.idea/
+runningcoinCS/*.iml
+runningcoinCS/*.iws
+runningcoinCS/*.ipr
+runningcoinCS/*.ids
+runningcoinCS/*.orig
+runningcoinCS/classes/
+runningcoinCS/node/
+runningcoinCS/node_tmp/
+runningcoinCS/node_modules/
+runningcoinCS/npm-debug.log.*
+runningcoinCS/.awcache/*
+runningcoinCS/.cache-loader/*
