--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -10,7 +10,7 @@ server:
   #  key-store-password: 45lgrs8gokejt0
 spring:
   datasource:
-     url: jdbc:mysql://47.96.173.94:3306/runningcoin?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+     url: jdbc:mysql://47.96.173.94:3306/runningcoin?useUnicode=yes&useSSL=false
      username: root
      password: qwert6
      driver-class-name: com.mysql.jdbc.Driver
