--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.running.coins</groupId>
     <artifactId>runningclub</artifactId>
-    <version>0.2.1-SNAPSHOT</version>
+    <version>0.2.4-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>runningclub</name>
@@ -147,11 +147,11 @@
                     </execution>
                 </executions>
             </plugin>
-  <!--           <plugin>
+             <!--<plugin>
                  <groupId>org.springframework.boot</groupId>
                  <artifactId>spring-boot-maven-plugin</artifactId>
-             </plugin>-->
-             <!--<plugin>
+             </plugin>
+             <plugin>
                  <groupId>org.mybatis.generator</groupId>
                  <artifactId>mybatis-generator-maven-plugin</artifactId>
                  <version>1.3.5</version>
